--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,15 +3,14 @@ name = "forge"
 version = "0.1.0"
 description = "A Git aware project management system"
 authors = ["Prince Lad <ladprince1112@gmail.com>"]
-license = "MIT"
-edition = "2024"
+license = "GPL-3.0-only"
+edition = "2021"
 
 [dependencies]
 crossterm = "0.29.0"
 ratatui = "0.29.0"
 color-eyre = "0.6.3"
-serde = "1.0.228"
-uuid = "1.19.0"
+uuid = { version = "1.19.0", features = ["v4"] }
 git2 = "0.20.3"
 
 # Read the optimization guideline for more details: https://ratatui.rs/recipes/apps/release-your-app/#optimizations
