--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,8 +10,11 @@ edition = "2021"
 crossterm = "0.29.0"
 ratatui = "0.29.0"
 color-eyre = "0.6.3"
-uuid = { version = "1.19.0", features = ["v4"] }
+uuid = { version = "1.19.0", features = ["v4", "serde"] }
 git2 = "0.20.3"
+serde = { version = "1.0.228", features = ["derive"] }
+serde_json = "1.0.148"
+chrono = "0.4.42"
 
 # Read the optimization guideline for more details: https://ratatui.rs/recipes/apps/release-your-app/#optimizations
 [profile.release]
