--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,6 +23,7 @@ git2 = "0.20.3"
 serde = { version = "1.0.228", features = ["derive"] }
 serde_json = "1.0.149"
 chrono = "0.4.43"
+crossbeam = "0.8.4"
 
 [dev-dependencies]
 tempfile = "3.8.1"
