--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,6 +24,7 @@ serde = { version = "1.0.228", features = ["derive"] }
 serde_json = "1.0.149"
 chrono = "0.4.43"
 crossbeam = "0.8.4"
+throbber-widgets-tui = "0.10.0"
 
 [dev-dependencies]
 tempfile = "3.24.0"
